--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
 # Object files
 *.o
 *.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Libraries
 *.lib
 *.a
-*.la
-*.lo
 
 # Shared objects (inc. Windows DLLs)
 *.dll
@@ -24,6 +16,13 @@
 *.exe
 *.out
 *.app
-*.i*86
-*.x86_64
+
+*.elf
+*.bin
+
+# other files
 *.hex
+*.d
+*mapfile
+
+.tag*
