Change the USB message API
Added to the functionality of the outputs. This requires changing how
the controll messages work. You can no longer change all the outputs at
once. They must be changed one at a time. The relay enable/disable has
it's own controll message. The wIndex is used to indicate which outputs
is being changed. The wValue is no longer a bitmast of the outputs state
but indicates weather to change the output on(!=0) or off(==0). The
output change control message must also contain 4 bytes of data. The
data is a delay time inmilliseconds. After the output state is changed a
timer is set to delay. After the delay expires the output will change to
to the opposite state of what was sent in the message.

Signed-off-by: Joseph A. Lutz <joseph.lutz@novatechweb.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,13 +35,20 @@ LDFLAGS += \
 CFLAGS += -DBOOTLOADER
 LDFLAGS += -Wl,-Ttext=0x8002000 -Wl,--defsym,_stack=0x20005000
 
+# uncomment if debugging code should be included
+#CFLAGS += -DDEBUG
+
+# uncomment if assembly *.s file should be created
+#CFLAGS += -S
+
 Q := @
 # Program rules
 SUB_DIR = \
 	platform/$(PLATFORM) \
 	usb \
 	i2c_led \
-	io
+	io \
+	nt_timer
 
 include $(addsuffix /Makefile, $(SUB_DIR))
 
@@ -70,6 +77,7 @@ $(PROGRAM).elf: $(OBJ)
 
 clean:
 	-$(Q)$(RM) $(addsuffix /*.o, $(SUB_DIR) .)
+	-$(Q)$(RM) $(addsuffix /*.s, $(SUB_DIR) .)
 	-$(Q)$(RM) $(addsuffix /*.d, $(SUB_DIR) .)
 	-$(Q)$(RM) $(addsuffix /*.~, $(SUB_DIR) .)
 	-$(Q)$(RM) $(addsuffix /mapfile, $(SUB_DIR) .)
